Updated Nav Bar links

--- a/www/index.html
+++ b/www/index.html
@@ -9,8 +9,8 @@
 </head>
 <nav class="nav-bar">
     <ul>
-        <li><a href="#">twitter</a></li>
-        <li><a href="#">linkedin</a></li>
+        <li><a href="https://linktr.ee/vinjadevix" target="_blank">twitter</a></li>
+        <li><a href="https://www.linkedin.com/in/1337sound">linkedin</a></li>
     </ul>
 </nav>
 <main class="landing">
@@ -27,7 +27,7 @@
             sequi quidem! Sequi sint fuga natus quia dolor? Autem dicta aliquid, harum in aperiam corrupti eligendi ab voluptates eum enim molestiae fugit inventore perspiciatis repellat laudantium, obcaecati natus dolores consequuntur illo rem numquam
             assumenda? Saepe animi veniam tempore fugit. Quos.</p>
         <button class="call-2-action">
-                <a href="#">Máis info</a>
+                <a href="./about.html">Máis info</a>
             </button>
     </section>
     <section>
