--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS:homework</title>
 </head>
+<header>
+    <h1>jsc07co</h1>
+    <h2>Ejercicios de CSS</h2>
+</header>
+<nav>
+    <ul>
+        <li> <a href="./www/index.html">Flexbox</a>
+        </li>
+    </ul>
+</nav>
 
 <body>
 
