Training camp added

--- a/index.html
+++ b/index.html
@@ -11,9 +11,16 @@
     <h2>Ejercicios de CSS</h2>
 </header>
 <nav>
+    <h2>Ejercicios para entregar</h1>
+        <ul>
+            <li> <a href="./www/index.html">Flexbox</a>
+            </li>
+        </ul>
+</nav>
+<nav>
+    <h2>Training camp</h2>
     <ul>
-        <li> <a href="./www/index.html">Flexbox</a>
-        </li>
+        <li><a href="./www/training/02-boxBasic.html">Web 1</a></li>
     </ul>
 </nav>
 
