GitHub pages updated for vacas

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <ul>
             <li> <a href="./www/index.html">Flexbox</a>
             </li>
+            <li><a href="./www/vacas/index.html">Vacas</a></li>
         </ul>
 </nav>
 
