--- a/www/vacas/index.html
+++ b/www/vacas/index.html
@@ -22,7 +22,7 @@
                 </li>
                 <li>
                     <a href="#comprar">
-                            Lorem, ipsum.
+                            Formulario
                         </a>
                 </li>
             </ul>
