--- a/www/vacas/index.html
+++ b/www/vacas/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>
+        <h1 class='inner_shadow'>
             Vacas
         </h1>
         <nav>
@@ -43,7 +43,7 @@
     </article>
     <section>
         <article>
-            <figure><img src="https://source.unsplash.com/400x400/?cow" alt=""></figure>
+            <figure><img src="https://source.unsplash.com/400x400/?cow1" alt=""></figure>
             <h1>Vaca 1</h1>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem quis vero fugiat explicabo omnis. Fugiat.</p>
             <section>
@@ -52,7 +52,7 @@
 
         </article>
         <article>
-            <figure><img src="https://source.unsplash.com/400x400/?cow" alt=""></figure>
+            <figure><img src="https://source.unsplash.com/400x400/?cow2" alt=""></figure>
             <h1>Vaca 2</h1>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem quis vero fugiat explicabo omnis. Fugiat.</p>
             <section>
@@ -61,7 +61,7 @@
 
         </article>
         <article>
-            <figure><img src="https://source.unsplash.com/400x400/?cow" alt=""></figure>
+            <figure><img src="https://source.unsplash.com/400x400/?cow3" alt=""></figure>
             <h1>Vaca 3</h1>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem quis vero fugiat explicabo omnis. Fugiat.</p>
             <section>
