added some text

--- a/www/team/index.html
+++ b/www/team/index.html
@@ -62,6 +62,7 @@
             </header>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore corrupti ipsum quia eligendi, unde obcaecati, doloremque at facilis enim dignissimos numquam voluptas ut dolor veniam soluta aut saepe delectus quisquam labore quasi laboriosam
                 ex sed animi harum! Reiciendis consequatur, dolore, officia ea libero, esse non rerum officiis nam repellat deleniti optio maxime. Facilis ducimus eligendi ea maiores molestias beatae cum.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque dolores veritatis minima illum corrupti numquam nemo provident accusantium eos sunt!</p>
         </article>
         <article>
             <header>
