--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li> <a href="./www/index.html">Flexbox</a>
             </li>
             <li><a href="./www/vacas/index.html">Vacas</a></li>
-            <li><a href="./www/team/index.html">Vacas</a></li>
+            <li><a href="./www/team/index.html">Team</a></li>
         </ul>
 </nav>
 
