update pages nav

--- a/index.html
+++ b/index.html
@@ -5,23 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS:homework</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
+<header>
+    <h1>jsc07co</h1>
+    <h2>Ejercicios de CSS</h2>
+    <h3>Pablo Viña</h3>
+</header>
+<nav>
+    <ul>
+        <li> <a href="./www/about/index.html">Flexbox</a>
+        </li>
+        <li><a href="./www/vacas/index.html">Vacas</a></li>
+        <li><a href="./www/team/index.html">Team</a></li>
+    </ul>
+</nav>
 
 
 <body>
-    <header>
-        <h1>jsc07co</h1>
-        <h2>Ejercicios de CSS</h2>
-    </header>
-    <nav>
-        <h2>Ejercicios para entregar</h1>
-            <ul>
-                <li> <a href="./www/index.html">Flexbox</a>
-                </li>
-                <li><a href="./www/vacas/index.html">Vacas</a></li>
-                <li><a href="./www/team/index.html">Team</a></li>
-            </ul>
-    </nav>
 
 </body>
 
