--- a/www/about/index.html
+++ b/www/about/index.html
@@ -33,10 +33,11 @@
     <section>
         <h2>Experiencia</h2>
         <ul>
-            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</li>
-            <li>Lorem ipsum dolor sit amet consectetur.</li>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-            <li>Lorem ipsum dolor sit amet consectetur.</li>
+            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit.</li>
+            <li>Lorem ipsum dolor sit amet consectetur. Lorem ipsum dolor sit amet consectetur.
+            </li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing. Lorem ipsum dolor sit amet.</li>
+            <li>Lorem ipsum dolor sit amet consectetur. Lorem ipsum dolor sit amet consectetur adipisicing.</li>
         </ul>
     </section>
 </main>
