added usr portraits

--- a/www/team/index.html
+++ b/www/team/index.html
@@ -16,7 +16,7 @@
         <article>
             <header>
 
-                <img id='i1' src="#" alt="Portrait">
+                <img src="https://source.unsplash.com/400x400/?portrait1" alt="Portrait">
                 <h2>Laura Finney</h2>
                 <nav>
                     <ul>
@@ -41,7 +41,7 @@
         <article>
             <header>
 
-                <img id='i2' src="#" alt="Portrait">
+                <img src="https://source.unsplash.com/400x400/?portrait2" alt="Portrait">
                 <h2>Laura Finney</h2>
                 <nav>
                     <ul>
@@ -67,9 +67,9 @@
         <article>
             <header>
 
-                <img id='i3' src="#" alt="Portrait">
+                <img src="https://source.unsplash.com/400x400/?portrait3" alt="Portrait">
                 <h2>Laura Finney</h2>
-                < target="_blank" nav>
+                <nav>
                     <ul>
                         <li>
                             <a href="https://linktr.ee/vinjadevix" target="_blank"></a>
@@ -81,10 +81,10 @@
                             <a href="https://linktr.ee/vinjadevix" target="_blank"></a>
                         </li>
                         <li>
-                            <a href="https://linktr.ee/vinjadevix"></a>
+                            <a href="https://linktr.ee/vinjadevix" target="_blank"></a>
                         </li>
                     </ul>
-                    </nav>
+                </nav>
             </header>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore corrupti ipsum quia eligendi, unde obcaecati, doloremque at facilis enim dignissimos numquam voluptas ut dolor veniam soluta aut saepe delectus quisquam labore quasi laboriosam
                 ex sed animi harum! Reiciendis consequatur, dolore, officia ea libero, esse non rerum officiis nam repellat deleniti optio maxime. Facilis ducimus eligendi ea maiores molestias beatae cum.</p>
