new css for pages nav

--- a/www/vacas/index.html
+++ b/www/vacas/index.html
@@ -9,6 +9,12 @@
 </head>
 
 <body>
+    <div class="circles">
+        <div class="circle1"></div>
+        <div class="circle2"></div>
+        <div class="circle3"></div>
+        <div class="circle4"></div>
+    </div>
     <header>
         <h1 class='inner_shadow'>
             Vacas
@@ -32,6 +38,7 @@
         </section>
     </header>
     <main>
+
         <article>
             <h1 id='lorem'>Lorem, ipsum.</h1>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo alias ex dicta natus mollitia? Odio aut, libero harum inventore voluptas deserunt debitis cumque aperiam magnam cum voluptate sequi deleniti atque?
