--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS:homework</title>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./www/index.css">
 </head>
+<div class="circles">
+    <div class="circle1">/</div>
+    <div class="circle2">\</div>
+    <div class="circle3">|</div>
+    <div class="circle4">/</div>
+</div>
 <header>
     <h1>jsc07co</h1>
     <h2>Ejercicios de CSS</h2>
