--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,12 @@
     <title>CSS:homework</title>
     <link rel="stylesheet" href="./index.css">
 </head>
+<div class="circles">
+    <div class="circle1">/</div>
+    <div class="circle2">\</div>
+    <div class="circle3">|</div>
+    <div class="circle4">/</div>
+</div>
 <header>
     <h1>jsc07co</h1>
     <h2>Ejercicios de CSS</h2>
