--- a/www/team/index.html
+++ b/www/team/index.html
@@ -16,8 +16,8 @@
         <article>
             <header>
 
-                <img src="https://source.unsplash.com/400x400/?portrait1" alt="Portrait">
-                <h2>Laura Finney</h2>
+                <img src="https://source.unsplash.com/400x400/?aaron" alt="Portrait">
+                <h2>Aaron Swart</h2>
                 <nav>
                     <ul>
                         <li>
@@ -41,8 +41,8 @@
         <article>
             <header>
 
-                <img src="https://source.unsplash.com/400x400/?portrait2" alt="Portrait">
-                <h2>Laura Finney</h2>
+                <img src="https://source.unsplash.com/400x400/?GNU" alt="Portrait">
+                <h2>Richard Stallman</h2>
                 <nav>
                     <ul>
                         <li>
@@ -67,8 +67,8 @@
         <article>
             <header>
 
-                <img src="https://source.unsplash.com/400x400/?portrait3" alt="Portrait">
-                <h2>Laura Finney</h2>
+                <img src="https://source.unsplash.com/400x400/?dice" alt="Portrait">
+                <h2>Gary Gygax</h2>
                 <nav>
                     <ul>
                         <li>
