added some text

--- a/www/training/02-boxBasic.html
+++ b/www/training/02-boxBasic.html
@@ -19,8 +19,10 @@
             <img src="#" alt="cara">
             <h1>Título sección</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio sit, aliquam aliquid inventore veritatis modi quidem totam doloremque cum nihil dolores officia sunt minima nostrum labore expedita enim corporis rem consequatur ducimus aut
-                amet blanditiis, repellendus vero. Doloribus, quisquam pariatur, mollitia voluptatem blanditiis inventore ex est, aut quo totam sequi!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi at exercitationem nobis! Maxime consequatur eaque, cumque nulla iure animi distinctio.</p>
+                amet blanditiis, repellendus vero. Doloribus, quisquam pariatur, mollitia voluptatem blanditiis inventore ex est, aut quo totam sequi! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae fuga quam aliquid ducimus nemo laudantium
+                qui doloribus assumenda dolor repellendus. Nisi qui excepturi consequuntur distinctio impedit blanditiis laborum quibusdam neque obcaecati delectus.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi at exercitationem nobis! Maxime consequatur eaque, cumque nulla iure animi distinctio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis deleniti porro libero dignissimos
+                similique sit beatae temporibus provident saepe pariatur.</p>
         </article>
         <form action=".">
             <fieldset>
