--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
         <li><a href="./www/team/index.html">Team</a></li>
     </ul>
 </nav>
+<nav>
+    <h3>Training</h3>
+    <ul>
+        <li> <a href="./www/training/02-boxBasic.html">Box Basic</a>
+        </li>
+        <li><a href="./www/training/03-boxModel.html">Box Model</a></li>
+    </ul>
+</nav>
 
 
 <body>
