--- a/www/index.html
+++ b/www/index.html
@@ -15,8 +15,8 @@
 </div>
 <header>
     <h1>jsc07co</h1>
-    <h2>Ejercicios de CSS</h2>
-    <h3>Pablo Viña</h3>
+    <h2>Pablo Viña</h2>
+    <h3>Ejercicios de CSS</h3>
 </header>
 <nav>
     <ul>
@@ -24,6 +24,15 @@
         </li>
         <li><a href="/vacas/index.html">Vacas</a></li>
         <li><a href="/team/index.html">Team</a></li>
+    </ul>
+</nav>
+<nav>
+    <h3>Training</h3>
+    <ul>
+        <li> <a href="./training/02-boxBasic.html">Box Basic</a>
+        </li>
+        <li><a href="./training/03-boxModel.html">Box Model</a></li>
+        <li><a href="/team/index.html">Menu</a></li>
     </ul>
 </nav>
 
