div for section

--- a/www/vacas/index.html
+++ b/www/vacas/index.html
@@ -9,12 +9,6 @@
 </head>
 
 <body>
-    <div class="circles">
-        <div class="circle1"></div>
-        <div class="circle2"></div>
-        <div class="circle3"></div>
-        <div class="circle4"></div>
-    </div>
     <header>
         <h1 class='inner_shadow'>
             Vacas
@@ -33,9 +27,12 @@
                 </li>
             </ul>
         </nav>
-        <section>
-            <a href="#">Comprar</a>
-        </section>
+        <div>
+
+            <section>
+                <a href="#">Comprar</a>
+            </section>
+        </div>
     </header>
     <main>
 
