minor fixes and textarea added

--- a/www/vacas/index.html
+++ b/www/vacas/index.html
@@ -102,6 +102,10 @@
                 </optgroup>
             </select>
             </fieldset>
+            <fieldset>
+                <label for="comentarios">Comentarios</label>
+                <textarea name="comentarios" id="comentarios"></textarea>
+            </fieldset>
             <fieldset class="checkbox">
                 <input type="checkbox" name="mailList" id="mailList">
                 <label for="mailList">Recibir newsletter?</label>
