--- a/www/team/index.html
+++ b/www/team/index.html
@@ -17,7 +17,7 @@
             <header>
 
                 <img src="https://source.unsplash.com/400x400/?aaron" alt="Portrait">
-                <h2>Aaron Swart</h2>
+                <h2>Aaron Swartz</h2>
                 <nav>
                     <ul>
                         <li>
