--- a/www/about/index.html
+++ b/www/about/index.html
@@ -14,35 +14,36 @@
     </ul>
 </nav>
 <main class="landing">
-    <header>
-        <img class="landing__portrait" src="./assets/img/portrait.png" alt="portrait">
-        <h1>Pablo Viña</h1>
-        <h3>info@sonvina.es</h3>
-    </header>
-    <section>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab dolore nisi odio doloremque eveniet, dignissimos officia sed delectus in ex obcaecati aspernatur eos perferendis veritatis, pariatur maxime dolor commodi corrupti ad quis aliquam laudantium!
-            Aliquid officiis itaque minus quae nesciunt accusamus vel quidem placeat dolorem nobis temporibus voluptatem optio quod reprehenderit, eligendi eum! Ducimus sed tempora unde quidem reprehenderit nulla! In nemo quasi neque ipsum modi ab explicabo,
-            aperiam, impedit nihil, voluptates dolorem! Unde tempora, atque iure expedita illo voluptatibus.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus cupiditate dolore enim velit sit voluptatem aperiam. Vel odio libero ad recusandae labore, dolorem maxime hic corrupti nemo quae, natus iusto, laborum aliquid commodi at explicabo
-            sequi quidem! Sequi sint fuga natus quia dolor? Autem dicta aliquid, harum in aperiam corrupti eligendi ab voluptates eum enim molestiae fugit inventore perspiciatis repellat laudantium, obcaecati natus dolores consequuntur illo rem numquam
-            assumenda? Saepe animi veniam tempore fugit. Quos.</p>
-        <button class="call-2-action">
+
+    <body>
+        <header>
+            <img class="landing__portrait" src="./assets/img/portrait.png" alt="portrait">
+            <h1>Pablo Viña</h1>
+            <h3>info@sonvina.es</h3>
+        </header>
+        <section>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab dolore nisi odio doloremque eveniet, dignissimos officia sed delectus in ex obcaecati aspernatur eos perferendis veritatis, pariatur maxime dolor commodi corrupti ad quis aliquam
+                laudantium! Aliquid officiis itaque minus quae nesciunt accusamus vel quidem placeat dolorem nobis temporibus voluptatem optio quod reprehenderit, eligendi eum! Ducimus sed tempora unde quidem reprehenderit nulla! In nemo quasi neque ipsum
+                modi ab explicabo, aperiam, impedit nihil, voluptates dolorem! Unde tempora, atque iure expedita illo voluptatibus.</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus cupiditate dolore enim velit sit voluptatem aperiam. Vel odio libero ad recusandae labore, dolorem maxime hic corrupti nemo quae, natus iusto, laborum aliquid commodi at explicabo
+                sequi quidem! Sequi sint fuga natus quia dolor? Autem dicta aliquid, harum in aperiam corrupti eligendi ab voluptates eum enim molestiae fugit inventore perspiciatis repellat laudantium, obcaecati natus dolores consequuntur illo rem numquam
+                assumenda? Saepe animi veniam tempore fugit. Quos.</p>
+            <button class="call-2-action">
                 <a href="./about.html">Máis info</a>
             </button>
-    </section>
-    <section>
-        <h2>Experiencia</h2>
-        <ul>
-            <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit.</li>
-            <li>Lorem ipsum dolor sit amet consectetur. Lorem ipsum dolor sit amet consectetur.
-            </li>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing. Lorem ipsum dolor sit amet.</li>
-            <li>Lorem ipsum dolor sit amet consectetur. Lorem ipsum dolor sit amet consectetur adipisicing.</li>
-        </ul>
-    </section>
+        </section>
+        <section>
+            <h2>Experiencia</h2>
+            <ul>
+                <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit.</li>
+                <li>Lorem ipsum dolor sit amet consectetur. Lorem ipsum dolor sit amet consectetur.
+                </li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing. Lorem ipsum dolor sit amet.</li>
+                <li>Lorem ipsum dolor sit amet consectetur. Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+            </ul>
+        </section>
 </main>
 
-<body>
 
 </body>
 
