--- a/www/index.html
+++ b/www/index.html
@@ -28,13 +28,19 @@
             <li><a href="/team/index.html">Team</a></li>
         </ul>
     </nav>
-    <nav>
+<!--     <nav>
         <h3>Training</h3>
         <ul>
             <li> <a href="./training/02-boxBasic.html">Box Basic</a>
             </li>
             <li><a href="./training/03-boxModel.html">Box Model</a></li>
             <li><a href="/team/index.html">Menu</a></li>
+        </ul>
+    </nav> -->
+    <nav>
+        <h3>Wild Tracks</h3>
+        <ul>
+            <li><a href="./clock/clock.html">HoraSon</a></li>
         </ul>
     </nav>
 
